fix: z-index conflict between .modal and .tab-content

--- a/src/stylesheets/base/_custom.scss
+++ b/src/stylesheets/base/_custom.scss
@@ -288,7 +288,7 @@ iframe {
     }
 
     .btn {
-      margin: calc(var(--#{$prefix}modal-footer-gap) * 0.5);
+      margin: calc(var(--#{$prefix}modal-footer-gap) * 0.25);
     }
   }
 }
